objects/Live_Agent_ID__c.object
<CustomObject><fields>
        <fullName>Chat_Button_ID__c</fullName>
        <inlineHelpText>Populate this field with the Chat Button ID.  Go to "Chat Buttons and Automated Invitations" in Setup and click into the "Napili Community Chat Button".  Copy the Chat Button Code ID out of your URL and paste into this field.</inlineHelpText>
        <label>Chat Button ID</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Deployment_ID_1__c</fullName>
        <inlineHelpText>Go to "Deployments" in Setup and click into the "Chat from Napili Template".  Copy the Deployment ID out of your URL and paste into this field.</inlineHelpText>
        <label>Deployment ID</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Deployment_ID_2__c</fullName>
        <inlineHelpText>Go to the "Company Information" page in Setup and copy the "Salesforce.com Organization ID" and paste into this field.</inlineHelpText>
        <label>Org ID</label>
        <length>50</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Live Agent Lightning Setup</label><nameField>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Live Agent Lightning Setup</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>